--- a/Project/rm_infantry/rm_infantry.build_log.htm
+++ b/Project/rm_infantry/rm_infantry.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.20.0.0
 Copyright (C) 2016 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: lawson law, none, LIC=Y2BSB-26ASW-PFSIX-H9HBT-M73GF-KYRI4
+License Information: DJI DJI, DJI, LIC=V85II-TE7P3-NTF3G-VLN7F-N30T8-I0MFT
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.20
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.18.0
 Dialog DLL:      TCM.DLL V1.14.9.0
  
 <h2>Project:</h2>
-F:\2018\RMÏÄÁîÓª\football\summer_camp\Project\rm_infantry.uvprojx
+C:\Users\14121\Documents\GitHub\RoboFootball\Project\rm_infantry.uvprojx
 Project File Date:  07/14/2018
 
 <h2>Output:</h2>
@@ -29,16 +29,16 @@ Project File Date:  07/14/2018
 Build target 'rm_infantry'
 compiling execute_custom.c...
 linking...
-Program Size: Code=40852 RO-data=840 RW-data=332 ZI-data=23940  
+Program Size: Code=40844 RO-data=840 RW-data=332 ZI-data=23940  
 FromELF: creating hex file...
 ".\rm_infantry\rm_infantry.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  F:\2018\RMÏÄÁîÓª\football\summer_camp\Project\RTE
+  C:\Users\14121\Documents\GitHub\RoboFootball\Project\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32F4xx_DFP\2.9.0\Drivers\CMSIS\Device\ST\STM32F4xx\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
